--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banladesh 2.0</title>
+    <title>Bangladesh 2.0</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+
+<body class="fira-sans">
+<header>
+    <nav>
+    <h1 class="title">Bangladesh 2.0</h1>
+     <a href=""><button class="btn">Sign In</button></a>
+    </nav>
+    <section class="banner">
+        <h3 class="banner-title">Bangladesh 2.0</h3>
+        <h1 class="banner-sub-title">Idea , innovation ,<br>
+            vision and challenges in <br> New Bangladesh.</h1>
+            <a href=""><button class="banner-btn">Explore New Bangladesh</button></a>
+
+    </section>
+</header>
 </body>
+
 </html>
