added bangaladesh 2.0 section

--- a/index.html
+++ b/index.html
@@ -15,19 +15,59 @@
 </head>
 
 <body class="fira-sans">
-<header>
-    <nav>
-    <h1 class="title">Bangladesh 2.0</h1>
-     <a href=""><button class="btn">Sign In</button></a>
-    </nav>
-    <section class="banner">
-        <h3 class="banner-title">Bangladesh 2.0</h3>
-        <h1 class="banner-sub-title">Idea , innovation ,<br>
-            vision and challenges in <br> New Bangladesh.</h1>
+    <header>
+        <nav>
+            <h1 class="title">Bangladesh 2.0</h1>
+            <a href=""><button class="btn">Sign In</button></a>
+        </nav>
+        <section class="banner">
+            <h3 class="banner-title">Bangladesh 2.0</h3>
+            <h1 class="banner-sub-title">Idea , innovation ,<br>
+                vision and challenges in <br> New Bangladesh.</h1>
             <a href=""><button class="banner-btn">Explore New Bangladesh</button></a>
 
-    </section>
-</header>
+        </section>
+    </header>
+    <main>
+        <section>
+            <h1 class="vision">Pillars of "Bangladesh 2.0"</h1>
+            
+            <div class="pillars">
+                <div class="card pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="pillar-title">Innovation</h3>
+                    <p class="pillar-description">Embrace the Fourth Industrial Revolution (4IR), Advance the
+                        Information and Communications Technology (ICT) industry, Support startups, and Promote smart
+                        commerce.
+                    </p>
+                </div>
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="pillar-title">Sustainability</h3>
+                    <p class="pillar-description">Bangladesh 2.0 should be environmentally friendly, and industries
+                        should be concerned with maintaining the Sustainable Development Goals (SDGs) and a green
+                        ecosystemf
+                    </p>
+                </div>
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="pillar-title">Infrastructure</h3>
+                    <p class="pillar-description">The Bangladesh 2.0 agenda envisions a future where economic growth is
+                        not achieved at the expense of the environment but is instead driven by sustainable practices.
+                    </p>
+                </div>
+                <div class="pillar cards">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="pillar-title">Empowerment</h3>
+                    <p class="pillar-description">Empowerment is a core pillar in this vision as it seeks to enable
+                        individuals and communities to unlock their full potential and actively contribute to the
+                        nation's progress.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
