--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section>
             <h1 class="vision">Pillars of "Bangladesh 2.0"</h1>
-            
+
             <div class="pillars">
                 <div class="card pillar">
                     <img src="assets/card-icon.png" alt="">
@@ -65,6 +65,44 @@
                     </p>
                 </div>
 
+            </div>
+
+        </section>
+        <!-- what I do section start  -->
+        <section>
+            <h1 class="vision">The Vision of Future</h1>
+
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+
+            <div class="future">
+                <div class="visions">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="future-title">Digital Transformation</h3>
+                    <p class="future-description">Creating a nationwide digital ecosystem to enhance connectivity and
+                        access to services for all citizens.
+                    </p>
+                    <a href=""><button class="vision-btn">Learn More</button></a>
+                </div>
+                <div class="green">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="green-title">Green Energy</h3>
+                    <p class="green-description">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly future.
+                    </p>
+                    <a href=""><button class="green-btn">Learn More</button></a>
+                </div>
+                <div class="modern">
+                    <img class="image" src="assets/card-icon.png" alt="">
+                    <h3 class="modern-title">Modern Infrastructure</h3>
+                    <p class="modern-description">Building state-of-the-art infrastructure to support economic growth and
+                        global competitiveness.
+                    </p>
+                    <a href=""><button class="modern-btn">Learn More</button></a>
+                </div>
             </div>
         </section>
     </main>
