--- a/index.html
+++ b/index.html
@@ -98,11 +98,103 @@
                 <div class="modern">
                     <img class="image" src="assets/card-icon.png" alt="">
                     <h3 class="modern-title">Modern Infrastructure</h3>
-                    <p class="modern-description">Building state-of-the-art infrastructure to support economic growth and
+                    <p class="modern-description">Building state-of-the-art infrastructure to support economic growth
+                        and
                         global competitiveness.
                     </p>
                     <a href=""><button class="modern-btn">Learn More</button></a>
                 </div>
+
+            </div>
+
+        </section>
+        <section class="bangladesh">
+            <p class="bd">"We witnessed a historic political changeover just 100 days ago. Future Bangladesh will be
+                based on
+                justice, human rights, and freedom of speech," he said while speaking at an international conference at
+                a hotel in Dhaka on Saturday. The Center for Governance Studies, a private think-tank, hosted the
+                conference titled 'Bay of Bengal Conversation - 2024.'
+
+            </p>
+            <br><strong class="bd-title">Dr. Muhammad Yunus</strong>
+            <br>
+            <div class="bd-sub-title">Chief Adviser of the People's Republic of Bangladesh</div>
+        </section>
+        <!-- recent-news -->
+        <section class="recent-news">
+            <div class="recent-news-text">
+                <h1>Recent News</h1>
+                <p>
+                    Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge technology, promoting inclusive growth, and ensuring
+                    sustainability. With initiatives in <br />
+                    renewable energy, digital transformation, and robust infrastructure,
+                    the country is set to become a global model of development.
+                </p>
+            </div>
+            <div class="bd-satelite">
+                <div class="satelite">
+                    <div class="satelite-1">
+                        <div class="satelite-img">
+                            <img src="assets/satelite.png" alt="" />
+                        </div>
+                        <div class="satelite-title">
+                            <h5>Bangladesh Launches New Satellite</h5>
+                            <img src="assets/al-jazeera.png" alt="" />
+                            <p>Date: 05/01/2025 <span style="margin-left: 10px">Time: 10.25 PM</span></p>
+
+                            <p>
+                                Not until the creation and maintenance of decent conditions of
+                                life for all people are recognized and <br> accepted as a common
+                                obligation of all people and all countries—not until then shall
+                                we, <br> with a certain degree of justification, be able to speak of
+                                humankind as civilized
+                            </p>
+                            <a href=""><button>Read More</button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="satelite">
+                    <div class="satelite-1" style="flex-direction: row-reverse;">
+                        <div class="satelite-img">
+                            <img src="assets/satelite.png" alt="">
+                        </div>
+                        <div class="satelite-title">
+                            <h5>Bangladesh Launches New Satellite</h5>
+                            <img src="assets/al-jazeera.png" alt="">
+                            <p>Date: 05/01/2025 <span style="margin-left: 10px">Time: 10.25 PM</span></p>
+
+                            <p>
+                                Not until the creation and maintenance of decent conditions of
+                                life for all people are recognized and <br> accepted as a common
+                                obligation of all people and all countries—not until then shall
+                                we, <br> with a certain degree of justification, be able to speak of
+                                humankind as civilized
+                            </p>
+                            <a href=""><button>Read More</button></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="donate">
+            <div>
+                <h1 class="donation-title">Donate Today</h1>
+                <p class="donation-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure.
+                </p>
+                <div>
+                <ul class="donation-list">
+                    <li><button class="donation-btn">100 Taka</button></li>
+                    <li><button class="dotnate-btn">200 Taka</button></li>
+                    <li><button class="donation-btn">500 Taka</button></li>
+                    <li><button class="donation-btn">1000 Taka</button></li>
+                </ul>
+                
+               </div>
+               <div><input type="text" name="" id="" placeholder="Other Amount (Taka)"></div>
             </div>
         </section>
     </main>
