--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body class="fira-sans">
     <header>
         <nav>
-            <h1 class="title">Bangladesh 2.0</h1>
-            <a href=""><button class="btn">Sign In</button></a>
+            <span style="margin-right: 100px;"><h1 class="title">Bangladesh 2.0</h1></span>
+          <span style="margin-left: 200px;"><a href=""><button class="btn">Sign In</button></a></span>
         </nav>
         <section class="banner">
             <h3 class="banner-title">Bangladesh 2.0</h3>
@@ -178,26 +178,54 @@
 
             </div>
         </section>
+        <!-- donation -->
         <section class="donate">
             <div>
                 <h1 class="donation-title">Donate Today</h1>
-                <p class="donation-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                <p class="donation-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge technology,
                     promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
                     digital transformation, and robust infrastructure.
                 </p>
                 <div>
-                <ul class="donation-list">
-                    <li><button class="donation-btn">100 Taka</button></li>
-                    <li><button class="dotnate-btn">200 Taka</button></li>
-                    <li><button class="donation-btn">500 Taka</button></li>
-                    <li><button class="donation-btn">1000 Taka</button></li>
-                </ul>
-                
-               </div>
-               <div><input type="text" name="" id="" placeholder="Other Amount (Taka)"></div>
+                    <ul class="donation-list">
+                        <li><button class="donation-btn">100 Taka</button></li>
+                        <li><button class="donate-btn">200 Taka</button></li>
+                        <li><button class="donation-btn">500 Taka</button></li>
+                        <li><button class="donation-btn">1000 Taka</button></li>
+                    </ul>
+
+                </div>
+                <button class="donation-amount">Other Amount (Taka)</button>
             </div>
         </section>
     </main>
+    <footer>
+        <!-- footer section -->
+        <section class="footer-section">
+            <div class="Subscribe-container">
+            <h1 class="Subscribe">Subscribe Newsletter</h1>
+            <p class="Subscribe-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth.
+            </p>
+            <ul class="Subscribe-list">
+                <li ><button class="email-btn">Enter your email here</button></li>
+                <li><button class="Subscribe-btn">Subscribe</button></li>
+            </ul>
+            <div><p class="spam">We promise not to spam you!</p></div>
+           </div>
+        </section>
+        <section class="bd-2-container">
+            <div>
+                <h2 class="bd-2">Bangladesh 2.0</h2>
+                <div class="bd-2-img">
+                    <a class="img-1" href=""><img src="assets/facebook.png" alt=""></a>
+                    <a class="img-1" href=""><img src="assets/instagram.png" alt=""></a>
+                    <a class="img-1" href=""><img src="assets/x.png" alt=""></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
